--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - pytorch
+  - pytorch=2.7
   - torchvision
   - torchaudio
   - cpuonly # or cudatoolkit=11.6 for GPU
